fix background flicker in mail list view when closing navigation

--- a/src/sass/views/_mail-list.scss
+++ b/src/sass/views/_mail-list.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
+    background: $color-white;
 
     header {
         flex-shrink: 0;
